0.67
    POD: drop "--" in front of the commands.