@@ -1,2 +1,4 @@
 0.67
     POD: drop "--" in front of the commands.
+    refresh: ensure ->rules is there before attempting to fiddle quilt
+        integration
